--- a/Module 2- Plotting in Financial Markets.ipynb
+++ b/Module 2- Plotting in Financial Markets.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Module 2"
+    "# Module 2\n",
+    "\n",
+    "'A picture speaks a thousand words' has never been truer in financial markets. Absolutely no one goes through the millions of rows of numbers, we always prefer the data in a plotted form to draw better inferences. This module would cover the plotting, basic technical indicators and our own customisation, and making our own trade calls!"
    ]
   },
   {
