--- a/Module 2- Plotting in Financial Markets.ipynb
+++ b/Module 2- Plotting in Financial Markets.ipynb
@@ -320,7 +320,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0a3b710908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f38333824a8>"
       ]
      },
      "execution_count": 10,
@@ -457,11 +457,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = pd.read_csv(\"Datasets/ADANIPOWER.csv\")\n",
-    "df3 = pd.read_csv(\"Datasets/JINDALSTEL.csv\")\n",
-    "df4 = pd.read_csv(\"Datasets/MINDTREE.csv\")\n",
-    "df5 = pd.read_csv(\"Datasets/RELINFRA.csv\")\n",
-    "df6 = pd.read_csv(\"Datasets/TATAPOWER.csv\")\n",
+    "df2 = pd.read_csv(\"Datasets/MID_CAP/ADANIPOWER.csv\")\n",
+    "df3 = pd.read_csv(\"Datasets/MID_CAP/JINDALSTEL.csv\")\n",
+    "df4 = pd.read_csv(\"Datasets/MID_CAP/MINDTREE.csv\")\n",
+    "df5 = pd.read_csv(\"Datasets/MID_CAP/RELINFRA.csv\")\n",
+    "df6 = pd.read_csv(\"Datasets/MID_CAP/TATAPOWER.csv\")\n",
     "\n",
     "df2 = df2[df2.Series == 'EQ']\n",
     "df3 = df3[df3.Series == 'EQ']\n",
