--- a/Module 1- Pandas.ipynb
+++ b/Module 1- Pandas.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Datasets/GMRINFRA.csv\")"
+    "df = pd.read_csv(\"Datasets/MID_CAP/GMRINFRA.csv\")"
    ]
   },
   {
@@ -1208,9 +1208,9 @@
       "\n",
       " 1.Compute Average & Profit/Loss Percentage 0. Exit\n",
       "Enter Choice:  1\n",
-      "Enter No of days: 366\n",
-      "Average for last 366 days is 16.90548780487805\n",
-      "Loss Percentage over last 366 days is 15.47%\n",
+      "Enter No of days: 365\n",
+      "Average for last 365 days is 16.90548780487805\n",
+      "Loss Percentage over last 365 days is 15.47%\n",
       "\n",
       " 1.Compute Average & Profit/Loss Percentage 0. Exit\n",
       "Enter Choice:  0\n"
